Solutions icon ie9 fix

--- a/wp-content/themes/northfield/src/sass/pages/_solutions.scss
+++ b/wp-content/themes/northfield/src/sass/pages/_solutions.scss
@@ -42,10 +42,13 @@
 }
 
 [class^="solutions-section-"] .col-image .icon {
-  @include absolute-center;
-  width: 80%;
+  width: 100%;
   padding: 0 20px;
   text-align: center;
+
+  @include bp-max-width($large) {
+    @include absolute-center;
+  }
 }
 
 [class^="solutions-section-"] [class^="icon-"] {
